# wdl

./: .editorconfig  .gitignore  Cargo.toml  README.md  Shuttle.toml  build-playground.sh  cspell.json  deploy-playground.sh  start-playground.sh
crates/ast/: Cargo.toml
crates/ast/src/: argument.rs  declaration.rs  expression.rs  function.rs  global_description.rs  identifier.rs  identifier_typed.rs  lib.rs  location.rs  module.rs  node.rs  source.rs  span.rs  statement.rs  type_.rs  workflow.rs
crates/ast/src/declaration/: actions.rs  function.rs  global.rs
crates/ast/src/expression/: array.rs  assignment.rs  binary.rs  call.rs  function_call.rs  group.rs  identifier_full.rs  index.rs  literal.rs  logic.rs  logical.rs  member.rs  object.rs  offset.rs  scoped_identifier.rs  send.rs  spawn.rs  unary.rs  variable.rs
crates/ast/src/source/: location.rs  span.rs
crates/ast/src/statement/: actions.rs  assignment.rs  block.rs  break_.rs  continue_.rs  declaration.rs  function_declaration.rs  global_declaration.rs  if_.rs  import.rs  let_.rs  order.rs  par.rs  print.rs  return_.rs  send.rs  sleep.rs  while_.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  router.rs
crates/common/: Cargo.toml
crates/common/src/: colored_string.rs  lib.rs
crates/format/: Cargo.toml
crates/format/src/: colored_string.rs  lib.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: channel.rs  declaration.rs  environment.rs  error.rs  expr.rs  expression.rs  function_value.rs  interpreter.rs  interrupt.rs  lib.rs  log_entry.rs  order.rs  router.rs  scope.rs  statement.rs  std.rs  stmt.rs  user_log.rs  value.rs  wdl_std.rs
crates/interpreter/src/declaration/: actions.rs  function.rs  global.rs  global_declaration.rs
crates/interpreter/src/expr/: array.rs  assignment.rs  binary.rs  function_call.rs  group.rs  identifier.rs  literal.rs  logical.rs  member.rs  object.rs  offset.rs  send.rs  spawn.rs  unary.rs
crates/interpreter/src/expression/: array.rs  binary.rs  call.rs  function_call.rs  group.rs  identifier.rs  literal.rs  logic.rs  logical.rs  member.rs  object.rs  offset.rs  spawn.rs  unary.rs  variable.rs
crates/interpreter/src/interpreter/: expr.rs  stmt.rs
crates/interpreter/src/interpreter/expr/: array.rs  assignment.rs  binary.rs  function_call.rs  group.rs  identifier.rs  logical.rs  member.rs  object.rs  offset.rs  unary.rs
crates/interpreter/src/interpreter/stmt/: actions.rs  block.rs  break_.rs  continue_.rs  function_declaration.rs  global_declaration.rs  if_.rs  import.rs  let_.rs  order.rs  par.rs  print.rs  return_.rs  sleep.rs  while_.rs
crates/interpreter/src/statement/: assignment.rs  block.rs  if_.rs  let_.rs  return_.rs  send.rs  while_.rs
crates/interpreter/src/stmt/: actions.rs  assignment.rs  block.rs  function_declaration.rs  global_declaration.rs  if_.rs  let_.rs  par.rs  return_.rs  send.rs  while_.rs
crates/interpreter/src/value/: channel_id.rs  function_id.rs  type_.rs
crates/interpreter/src/wdl_std/: arg.rs  arg_type.rs  arg_types.rs  arguments.rs  call_context.rs  env.rs  from_argument.rs  from_arguments.rs  from_call_context.rs  from_value.rs  handler.rs  handler_function.rs  handlers.rs  into_result.rs  into_value.rs  modules.rs  print.rs  result_type.rs  sleep.rs  source.rs  std_function.rs
crates/interpreter/src/wdl_std/handlers/: print.rs  sleep.rs
crates/interpreter/src/wdl_std/modules/: action.rs  channel.rs  debug.rs  http.rs  log.rs  order.rs  regex.rs  test.rs  time.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/parser/src/lexer/: lexer_error.rs
crates/parser/src/parser/: declaration.rs  expression.rs  function.rs  identifier.rs  parser_error.rs  parser_state.rs  statement.rs  token_stream.rs  type_.rs
crates/parser/src/parser/declaration/: actions.rs  function.rs  global.rs
crates/parser/src/parser/expression/: additive.rs  and.rs  assignment.rs  atomic.rs  comparison.rs  member_call_index.rs  multiplicative.rs  null_coalescing.rs  or.rs  send.rs  unary.rs
crates/parser/src/parser/statement/: actions.rs  block.rs  break_.rs  continue_.rs  else_.rs  function_declaration.rs  global_declaration.rs  if_.rs  let_.rs  order.rs  par.rs  print.rs  return_.rs  sleep.rs  while_.rs
crates/router/: Cargo.toml  build.rs
crates/router/proto/: router.proto
crates/router/src/: drive.rs  drop.rs  lib.rs  pickup.rs  router_client_grpc.rs  router_client_ws.rs  target.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wdl-playground/: Cargo.toml
crates/wdl-playground/src/: main.rs
doc/src/: language.md
doc/src/language/: 01_syntax.md  02_values.md  04_functions.md
doc/src/standard_library/: modules.md
doc/src/standard_library/modules/: channel.md  http.md  log.md  order.md  regex.md
doc/src/standard_library/types/: http_response.md  no_station_left_event.md  target.md
examples/: station2station.wdl
lang-doc/: book.toml
lang-doc/src/: SUMMARY.md  introduction.md  standard_library.md
lang-doc/src/language/: 01_syntax.md  03_variables.md  04_functions.md  05_channels.md  06_operators.md  07_control_structures.md
lang-doc/src/standard_library/: types.md
lang-doc/src/standard_library/modules/: action.md  channel.md  http.md  log.md  order.md  regex.md  time.md
lang-doc/src/standard_library/types/: channel.md  events.md  http_response.md  target.md
lang-doc/theme/: highlight.js
lang-playground/: package-lock.json  package.json
lang-playground/public/: editor.js  index.html  main.js  output.js  router.js  script.js  style.css  typedef.js
lang-support/: language-configuration.json  package.json
lang-support/syntaxes/: wdl.tmLanguage.json
playground/: Cargo.toml
playground/public/: index.html  script.js
playground/src/: main.rs
vscode-extension/: package.json
wdl-playground-ui/: package-lock.json  package.json
wdl-playground-ui/src/: index.html  main.js  output.js  router.js  style.css
