[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { path = "../crates/ast" }
parser = { path = "../crates/parser" }

axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
