[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
parser = { path = "../parser" }
router = { path = "../router" }
interpreter = { path = "../interpreter" }

log = "0.4.21"
colored = "2"
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1.37", features = ["rt-multi-thread", "fs"] }
tonic = "0.11"
simplelog = "0.12.2"
