[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { path = "../ast" }
format = { path = "../format", features = ["interpreter"] }
interpreter = { path = "../interpreter" }
parser = { path = "../parser" }
router = { path = "../router" }

clap = { version = "4.5.26", features = ["derive"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.135"
simplelog = "0.12.2"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "fs"] }
tonic = "0.12.3"
