[package]
name = "format"
version = "0.1.0"
edition = "2021"

[features]
interpreter = ["dep:interpreter"]

[dependencies]
ast = { path = "../ast" }
interpreter = { path = "../interpreter", optional = true }
parser = { path = "../parser" }

colored = "2.1.0"
html-escape = "0.2.13"
serde = { version = "1.0.200", features = ["derive"] }
