[package]
name = "format"
version = "0.1.0"
edition = "2024"

[features]
interpreter = ["dep:interpreter"]

[dependencies]
ast = { path = "../ast" }
interpreter = { path = "../interpreter", optional = true }
parser = { path = "../parser" }

colored = "3.0.0"
html-escape = "0.2.13"
serde = { version = "1.0.217", features = ["derive"] }
