[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[features]
playground = []

[dependencies]
ast = { path = "../ast" }
router = { path = "../router" }

async-recursion = "1.0.5"
futures = "0.3.29"
log = "0.4.21"
regex = "1.10.3"
reqwest = "0.12.3"
serde = "1.0.197"
serde_json = "1.0.108"
tokio = { version = "1.37", features = ["macros"] }
