[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[features]
playground = []

[dependencies]
ast = { path = "../ast" }
router = { path = "../router" }

async-recursion = "1.1.1"
futures = "0.3.31"
log = "0.4.25"
regex = "1.11.1"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros"] }
