[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"
