[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
router = { path = "../router" }
parser = { path = "../parser" }
interpreter = { path = "../interpreter" }

axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
socketioxide = "0.13.0"
serde_json = "1.0.116"
