[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
format = { path = "../format" }
parser = { path = "../parser" }

wasm-bindgen = { version = "0.2.92", features = ["serde", "serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.202", features = ["derive"] }
