[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
format = { path = "../format" }
parser = { path = "../parser" }

serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.100", features = ["serde", "serde-serialize"] }
