[package]
name = "wdl-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
format = { path = "../format", features = ["interpreter"] }
interpreter = { path = "../interpreter", features = ["playground"] }
parser = { path = "../parser" }
router = { path = "../router" }

axum = "0.8.1"
log = "0.4.25"
serde_json = "1.0.135"
socketioxide = "0.15.1"
shuttle-axum = "0.51.0"
shuttle-runtime = "0.51.0"
tokio = "1.43.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "cors", "compression-full"] }
